--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "primeicons": "^5.0.0",
