--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "primereact": "^8.0.0-rc.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-idle-timer": "^5.4.0",
     "react-modal": "^3.15.1",
     "react-redux": "7.2.8",
     "react-router-dom": "^6.3.0",
